--- a/app/views/social_posts/_social_post.html.erb
+++ b/app/views/social_posts/_social_post.html.erb
@@ -1,7 +1,8 @@
-<div id="<%= dom_id social_post %>">
+
+<%= turbo_frame_tag dom_id(social_post), data: { turbo: 'false' } do %>
   <p>
     <strong>User:</strong>
-    <%= link_to social_post.user.username, social_post.user %>
+    <%= link_to(social_post.user.username, social_post.user)%>
   </p>
   <p>
     <strong>Title:</strong>
@@ -31,4 +32,4 @@
     <% end %>
     <p><%= social_post.likes.count %> Likes</p>
   </div>
-</div>
+<% end %>
