--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,14 +8,5 @@
 <p><%= @user.followers.count %> Followers </p>
 <p><%= @user.following.count %> Following </p>
 <% if current_user %>
-    <% if current_user.following?(@user) %>
-        <%= button_to "Unfollow", unfollow_path(@user)%>
-    <% elsif current_user.sent_follow_request_to?(@user) %>
-        <%= button_to "Cancel follow request", cancel_path(@user) %>
-    <% else %>
-        <% if @user.id == current_user.id %>
-        <% else %>
-            <%= button_to "Follow", follow_path(@user)%>
-        <% end %>
-    <% end %>
+    <%= render "follow_button", this_user: current_user, other_user: @user %>
 <% end%>
