--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,8 +18,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_field :bio %>
+    <%= f.label :headline %><br />
+    <%= f.text_field :headline %>
   </div>
 
   <div class="field">
