--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<%= stylesheet_link_tag("navbar.css")%>
+<%= stylesheet_link_tag "navbar", "data-turbo-track": "reload" %>
 <div class="navbar">
     <ul>
         <li><a href="/">Home</a></li>
