--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -1,23 +1,82 @@
+@import "global-styles";
 .navbar {
     width: 100%;
     height: 50px;
-    background-color: rgb(58, 58, 58);
+    background-color: $primary-color;
+    position: relative;
     
-  }
+}
+
+.navbar::after {
+  display: block;
+  content: '';
+  height: 1px;
+  background: $dark-gray-font-color;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
  
 .navbar ul {
-list-style-type: none;
-display: flex;
-height: 100%;
-justify-content: center;
-align-items: center;
-}
+  list-style-type: none;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  li {
+    padding: 0px 10px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    a {
+      color: white;
+      height: 100%;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: $body-font-size;
 
-.navbar li {
-padding: 10px;
-}
+      .icon {
+        padding: 15px 0px 8px 0px;
+      }
 
-.navbar li a {
-color: white;
-text-decoration: none;
+      img {
+        width: 25px;
+        border-radius: 50%;
+      }
+    }
+    .search-form {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      position: relative;
+      .icon {
+        position: absolute;
+        left: 5px;
+        top: 50%;
+        color: $gray-font-color;
+      }
+      .icon::before {
+        color: $gray-font-color;
+      }
+      input {
+        height: 70%;
+        border: none;
+        border-radius: 5px;
+        background-color: $quaternary-color;
+        color: $light-gray-font-color;
+        padding: 0px 5px 0px 25px;
+        font-size: $body-font-size;
+      }
+      input::placeholder {
+        color: $gray-font-color;
+      }
+    }
+  }
+  .search-bar {
+
+  }
 }
