--- a/app/assets/stylesheets/social-posts.css.scss
+++ b/app/assets/stylesheets/social-posts.css.scss
@@ -146,6 +146,11 @@
       padding: 0px 10px;
       position: relative;
       font-size: $meta-data-font-size;
+      display: flex;
+      justify-content: space-between;
+      .comments-count {
+
+      }
     }
 
     .data-footer::after {
@@ -167,34 +172,116 @@
       display: flex;
       align-items: center;
       padding: 0px 5px;
-
-      .like_button {
+      .action-button-container
+      {
         height: 100%;
-        width: 100%;
         form {
           height: 100%;
-          width: 100%;
+        }
+      }
+      .button-to {
+        height: 100%;
+      }
 
-          button {
-            /* background-color: bisque; */
-            height: 100%;
-            width: 100%;
-            padding: 5px;
-            color: white;
-            background-color: #1d2226;
-            border-radius: 5px;
-            border: none;
+
+      .comment-button, .like-button
+      {
+        background-color: $primary-color;
+        border: none;
+        height: 100%;
+        width: 100%;
+        padding: 5px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        p {
+          font-size: $body-font-size;
+        }
+      }
+
+      .comment-button:hover, .like-button:hover {
+        cursor: pointer;
+        background-color: #4a535a;
+      }
+
+      .unlike
+      {
+        color: rgb(25, 113, 181);
+      }
+      
+    }
+
+    .new-comment {
+      width: 100%;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      padding: 10px 5px;
+
+      img {
+        display: block;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-right: 10px;
+      }
+      input {
+        width: 90%;
+        height: 100%;
+        border: 1px solid $gray-font-color;
+        background-color: $primary-color;
+        border-radius: 20px;
+        margin: 0px 5px;
+        color: $white-font-color;
+        font-size: $body-font-size;
+        padding: 0px 10px;
+      }
+      input::placeholder {
+        color: $gray-font-color
+      }
+    }
+
+    .comment {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      padding: 5px 5px;
+      .image-container {
+        margin-right: 10px;
+        img {
+          width: 40px;
+          border-radius: 50%;
+        }
+      }
+
+      .container {
+        flex-grow: 1;
+        background-color: $comment-background-color;
+        border-radius: 0px $panel-border-radius 0px $panel-border-radius;
+        padding: 5px 0px;
+        .header {
+          display: flex;
+          flex-direction: column;
+          padding: 0px 10px;
+
+          .username {
+            color: $white-font-color;
+            font-weight: $bold-font-weight;
+            font-size: $base-font-size;
+            text-decoration: none;
           }
-
-          button:hover {
-            cursor: pointer;
-            background-color: #4a535a;
+    
+          .location {
+            color: $gray-font-color;
+            font-size: $meta-data-font-size;
+            font-weight: $base-font-weight;
+            text-decoration: none;
           }
         }
-
-        .unlike
-        {
-          color: rgb(25, 113, 181);
+        .body {
+          padding: 5px 10px;
+          font-size: $body-font-size;
         }
       }
     }
