--- a/app/assets/stylesheets/user-profile.css.scss
+++ b/app/assets/stylesheets/user-profile.css.scss
@@ -50,13 +50,14 @@
             font-size: $body-font-size;
             color: $gray-font-color;
             display: block;
+            padding: 0px 0px 30px 0px;
         }
 
         .following {
             color: $gray-font-color;
             font-size: $meta-data-font-size;
             display: block;
-            padding: 10px 0px;
+            //padding: 10px 0px;
         }
 
         #follow_button {
