--- a/app/views/social_posts/_like_button.html.erb
+++ b/app/views/social_posts/_like_button.html.erb
@@ -1,11 +1,12 @@
-<%= turbo_frame_tag "#{dom_id(social_post)}_like_button" do %>
-    <div class = "like_button">
-        <% like = this_user.likes.find_by(social_post: social_post)%>
-        <% if like.nil? %>
-        <%# fa_icon("thumbs-up 2x", type: :light) %>
-            <%= button_to icon('fa-regular', 'thumbs-up',class:"fa-2x") + " Like", likes_path, params: {like: {social_post_id: social_post.id}}, method: :post %>
-        <% else %>
-            <%= button_to icon('fa-solid', 'thumbs-up',class:"fa-2x") + " Like", like_path(like), class: "unlike", method: :delete %>
+<%= turbo_frame_tag "#{dom_id(social_post)}_like_button", class:"action-button-container" do %>
+    <% like = this_user.likes.find_by(social_post: social_post)%>
+    <% if like.nil? %>
+        <% button_to likes_path, params: {like: {social_post_id: social_post.id}}, class: "like-button", method: :post do %>
+            <p><i class="fa-regular fa-thumbs-up fa-xl"></i> Like</p>
         <% end %>
-    </div>
+    <% else %>
+        <% button_to like_path(like), class: "like-button unlike", method: :delete do %>
+            <p><i class="fa-solid fa-thumbs-up fa-xl"></i> Like</p>
+        <% end %>
+    <% end %>
 <% end %>
