editable profiles, updated logout/signup button styling

--- a/app/assets/stylesheets/global-styles.css.scss
+++ b/app/assets/stylesheets/global-styles.css.scss
@@ -13,6 +13,8 @@ $gray-font-color: #96999b;
 $comment-background-color: #3c4345;
 $light-gray-font-color:#eaeef0;
 $dark-gray-font-color: #3a3a3a;
+$warning-color: #c00000;
+$warning-highlight-color: #dd0202;
 $horizontal-padding-value: 20px;
 $h1-font-size:24px;
 $base-font-size:18px;
