--- a/app/assets/stylesheets/social-posts.css.scss
+++ b/app/assets/stylesheets/social-posts.css.scss
@@ -103,7 +103,7 @@
         text-decoration: none;
       }
 
-      .location {
+      .headline {
         color: $gray-font-color;
         font-size: $meta-data-font-size;
         font-weight: $base-font-weight;
@@ -272,7 +272,7 @@
             text-decoration: none;
           }
     
-          .location {
+          .headline {
             color: $gray-font-color;
             font-size: $meta-data-font-size;
             font-weight: $base-font-weight;
