--- a/app/views/social_posts/_comments_feed.html.erb
+++ b/app/views/social_posts/_comments_feed.html.erb
@@ -12,7 +12,7 @@
             <div class="container">
                 <%= link_to commenter, class:"header" do %>
                     <p class="username"><%= commenter.username %> </p>
-                    <p class="location"><%= commenter.username %> </p>
+                    <p class="headline"><%= commenter.headline %> </p>
                 <%end%>
                 <p class="body"><%= comment.text %></p>
             </div>
