--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,9 +40,9 @@
                 <%end%>
             </li>
 
-            <li><%= button_to("Log Out", destroy_user_session_path, method: :delete) %></li>     
+            <li class="special-li"><%= button_to("Log Out", destroy_user_session_path, class:"logout-button", method: :delete) %></li>     
         <% else %>
-            <li><%= link_to "Sign up", new_user_registration_path %></a></li>
+            <li class="special-li"><%= link_to "Sign up", new_user_registration_path, class:"signup-link" %></li>
         <% end %>
     </ul>
 </div>
