--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,13 @@
 <%= stylesheet_link_tag "user-profile", "data-turbo-track": "reload" %>
+<%= turbo_frame_tag "modal" %>
 <div class=page-content>
+    <% if @user == current_user %>
+        <%= link_to edit_user_path(current_user), class:"edit-button" do %>
+            <div class="icon-container">
+                <i class="fa-solid fa-pencil"></i>
+            </div>
+        <% end %>
+    <% end %>
     <div class="header-section panel">
         <% if @user.avatar.attached? %>
             <div class="background"><%= image_tag(@user.avatar) %></div>
@@ -7,9 +15,10 @@
             <div class="background"><%= image_tag("missing-avatar.png") %></div>
         <% end %>
         <div class="info">
+
             <p class="username"> <%= @user.username %> </p>
             <p class="headline"> <%= @user.headline %> </p>
-            <p class="location"> <%= @user.headline %> </p>
+            <p class="location"> <%= @user.location %> </p>
 
             <p class="following"><%= @user.followers.count %> Followers </p>
             <p class="following"><%= @user.following.count %> Following </p>
@@ -18,7 +27,12 @@
                 <%= render "follow_button", this_user: current_user, other_user: @user %>
             <% end%>
         </div>
-        <%= image_tag("missing-avatar.png",class:"profile-pic") %></div>
+        <% if @user.avatar.attached? %>
+            <%= image_tag(@user.avatar,class:"profile-pic") %>
+        <% else %>
+            <%= image_tag("missing-avatar.png",class:"profile-pic") %>
+        <% end %>
+        
     </div>
     <div class="about-section panel">
         <p class="section-title">About</p>
