--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,4 +1,5 @@
-<div>
+<%= stylesheet_link_tag "profiles", "data-turbo-track": "reload" %>
+<div class="container">
     <% @users.each do |user|%>
         <%= render user%>
     <% end %>
