--- a/app/views/social_posts/index.html.erb
+++ b/app/views/social_posts/index.html.erb
@@ -2,6 +2,19 @@
 <p style="color: green"><%= notice %></p>
 <%= turbo_frame_tag "modal" %>
 <div class=page-content>
+  <div class="welcome">
+    <div>
+      <%= image_tag("trey.jpg",class:"trey-image") %>
+    </div>
+    <p>
+      </br>Hi, my name is Trey Dettmer. Welcome to LonkedOn!</br></br>I created this application
+      in three weeks as a way to familiarize myself with the Ruby on Rails framework. 
+      I tried to emulate the base features and appearance of the popular online job board website which inspired LonkedOn. All jobs and companies are fictional.
+      </br></br>I have populated the website with fake users and myself. For security and management reasons,
+      I am not allowing any new user accounts to be created. However, you can watch what the user experience is like in <a href="https://treydettmer.github.io/portfolio/" >this video</a>.
+      </br></br>You can check out more of my work at <a href="https://treydettmer.github.io/portfolio/" >my portfolio</a>.
+    </p>
+  </div>
 
   <%= turbo_frame_tag :results, data: { turbo_action: 'advance' } do %>
     <div id="social_posts" class="social_posts_container">
