--- a/app/views/work_experiences/_form.html.erb
+++ b/app/views/work_experiences/_form.html.erb
@@ -15,27 +15,27 @@
     <% end %>
     <div>
       <%= form.label :title, class:"label" %>
-      <%= form.text_field :title, class:"text-input long", value:work_experience.title %>
+      <%= form.text_field :title, class:"text-input long",maxlength: 35,:required => true, value:work_experience.title %>
     </div>
     <div>
       <%= form.label :location, class:"label" %>
-      <%= form.text_field :location, class:"text-input long", value:work_experience.location %>
+      <%= form.text_field :location, class:"text-input long",maxlength: 35,:required => true, value:work_experience.location %>
     </div>
     <div>
       <%= form.label :company_id, "Company", class:"label" %>
-      <%= form.collection_select :company_id, Company.all, :id, :title, prompt: true, value:work_experience.company %>
+      <%= form.collection_select(:company_id, Company.all, :id, :title, {:prompt => 'Please select'}, {:required => true})%>
     </div>
     <div>
       <%= form.label :start_date, class:"label" %>
-      <%= form.date_field :start_date, class:"date-input", value:work_experience.start_date %>
+      <%= form.date_field :start_date, class:"date-input",:required => true, value:work_experience.start_date %>
     </div>
     <div>
       <%= form.label :end_date, class:"label" %>
-      <%= form.date_field :end_date, class:"date-input", value:work_experience.end_date %>
+      <%= form.date_field :end_date, class:"date-input",:required => true, value:work_experience.end_date %>
     </div>
     <div>
       <%= form.label :description, class:"label" %>
-      <%= form.text_area :description, class:"text-input long", value:work_experience.description %>
+      <%= form.text_area :description, class:"text-input long",maxlength: 600, value:work_experience.description %>
     </div>
     <div>
       <%= form.text_field :user_id, type:"hidden", value:user.id %>
