--- a/app/assets/stylesheets/social-posts.css.scss
+++ b/app/assets/stylesheets/social-posts.css.scss
@@ -23,7 +23,7 @@
     float: left;
     width: 75px;
     height: 75px;
-    padding: 5px;
+    padding: 5px 5px 5px 0px;
     border-radius: 50%;
  }
 
@@ -45,11 +45,13 @@
 
       .image {
         height: 50px;
+        width: 50px;
         margin-right: 10px;
         img {
-          height: 100%;
+          height: 50px;
+          width: 50px;
           object-fit: contain;
-
+          background-color: black;
           border-radius: 50%;
         }
       }
@@ -208,6 +210,8 @@
 
       img{
         height: 50px;
+        width: 50px;
+        background: black;
         object-fit: contain;
         margin-right: 10px;
         border-radius: 50%;
@@ -312,6 +316,7 @@
         display: block;
         width: 40px;
         height: 40px;
+        background-color: black;
         border-radius: 50%;
         margin-right: 10px;
       }
