--- a/app/assets/stylesheets/user-profile.css.scss
+++ b/app/assets/stylesheets/user-profile.css.scss
@@ -99,7 +99,7 @@
             font-size: $body-font-size;
             color: $gray-font-color;
             display: block;
-            padding: 0px 0px 30px 0px;
+            padding: 0px 0px 15px 0px;
         }
 
         .following {
@@ -140,6 +140,7 @@
         height: 150px;
         border-radius: 50%;
         border: solid 5px $dark-gray-font-color;
+        background: black;
     }
 }
 
