--- a/app/views/social_posts/_social_post.html.erb
+++ b/app/views/social_posts/_social_post.html.erb
@@ -19,11 +19,13 @@
           </div>
         <% end %>
       <% end %>
-      <% if social_post.user == current_user || current_user.admin? %>
-        <%= button_to social_post_path(social_post), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this post?",turbo_frame: "_top"}, method: :delete, class: "delete-button" do %>
-          <div class="icon-container">
-              <i class="fa-solid fa-trash-can icon"></i>
-          </div>
+      <% if current_user %>
+        <% if social_post.user == current_user || current_user.admin? %>
+          <%= button_to social_post_path(social_post), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this post?",turbo_frame: "_top"}, method: :delete, class: "delete-button" do %>
+            <div class="icon-container">
+                <i class="fa-solid fa-trash-can icon"></i>
+            </div>
+          <% end %>
         <% end %>
       <% end %>
     </div>
