--- a/app/assets/stylesheets/social-posts.css.scss
+++ b/app/assets/stylesheets/social-posts.css.scss
@@ -345,6 +345,8 @@
         margin-right: 10px;
         img {
           width: 40px;
+          height: 40px;
+          background-color: black;
           border-radius: 50%;
         }
       }
