updated styling, changed post order to descending

--- a/app/assets/stylesheets/user-profile.css.scss
+++ b/app/assets/stylesheets/user-profile.css.scss
@@ -111,7 +111,7 @@
 
         #follow_button {
             position: absolute;
-            bottom: $horizontal-padding-value;
+            bottom: 5px;
             left: $horizontal-padding-value;
         }
 
