--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -42,7 +42,7 @@
 
             <li class="special-li"><%= button_to("Log Out", destroy_user_session_path, class:"logout-button", method: :delete) %></li>     
         <% else %>
-            <li class="special-li"><%= link_to "Log In", new_session_path(resource_name), class:"signup-link" %></li>
+            <li class="special-li"><%= link_to "Sign up or Log In", new_user_registration_path, class:"signup-link" %></li>
         <% end %>
     </ul>
 <%end%>
