added screenshots, updated app title, updated link to video

--- a/app/views/social_posts/index.html.erb
+++ b/app/views/social_posts/index.html.erb
@@ -9,7 +9,7 @@
       in three weeks as a way to familiarize myself with the Ruby on Rails framework. 
       I tried to emulate the base features and appearance of the popular online job board website which inspired LonkedOn. All jobs and companies are fictional.
       </br></br>I have populated the website with fake users and myself. For security and management reasons,
-      I am not allowing any new user accounts to be created. However, you can watch what the user experience is like in <a href="https://treydettmer.github.io/portfolio/" >this video</a>.
+      I am not allowing any new user accounts to be created. However, you can watch what the user experience is like in <a href="https://www.youtube.com/watch?v=40PpYuyoNvs" >this video</a>.
       </br></br>You can check out more of my work at <a href="https://treydettmer.github.io/portfolio/" >my portfolio</a>.
     </p>
   </div>
